// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Employer dashboard deprecated: renders a table of claims with links if employer is registered in FINEOS 1`] = `
<table
  class="usa-table usa-table--borderless width-full usa-table--stacked"
>
  <thead>
    <tr>
      <th
        scope="col"
      >
        Employee name
      </th>
      <th
        scope="col"
      >
        Application ID
      </th>
      <th
        scope="col"
      >
        Organization
      </th>
      <th
        scope="col"
      >
        Employer ID number
      </th>
      <th
        scope="col"
      >
        Application start date
      </th>
      <th
        scope="col"
      >
        Status
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th
        data-label="Employee name"
        data-test="employee_name"
        scope="row"
      >
        <a
          href="/employers/applications/new-application?absence_id=NTN-111-ABS-01"
        >
          Jane Doe
        </a>
      </th>
      <td
        data-label="Application ID"
      >
        <a
          href="/employers/applications/new-application?absence_id=NTN-111-ABS-01"
        >
          NTN-111-ABS-01
        </a>
      </td>
      <td
        data-label="Organization"
      >
        Work Inc
      </td>
      <td
        data-label="Employer ID number"
      >
        12-3456789
      </td>
      <td
        data-label="Application start date"
      >
        1/15/2021
      </td>
      <td
        data-label="Status"
      >
        <span
          class="usa-tag display-inline-block text-bold text-middle text-center text-no-wrap text-success-dark bg-success-lighter"
        >
          Approved
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Employer dashboard renders a table of claims, with links to status page 1`] = `
<table
  class="usa-table usa-table--borderless width-full usa-table--stacked"
>
  <thead>
    <tr>
      <th
        scope="col"
      >
        Employee (Application ID)
      </th>
      <th
        scope="col"
      >
        Organization (FEIN)
      </th>
      <th
        scope="col"
      >
        Leave details
      </th>
      <th
        scope="col"
      >
        Review due date
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="text-top"
    >
      <th
        data-label="Employee (Application ID)"
        scope="row"
      >
        <a
          href="/employers/applications/status?absence_id=NTN-111-ABS-01"
        >
          Jane Doe
          <div
            class="font-body-2xs text-normal"
          >
            NTN-111-ABS-01
          </div>
        </a>
      </th>
      <td
        data-label="Organization (FEIN)"
      >
        <div
          class="text-wrap"
        >
          Work Inc
          <div
            class="font-body-2xs text-base-dark"
          >
            12-3456789
          </div>
        </div>
      </td>
      <td
        data-label="Leave details"
      >
        <div
          class="grid-row grid-gap-1 margin-top-1 mobile-lg:margin-top-0"
          data-testid="absence-period"
        >
          <div
            class="desktop:grid-col-auto"
          >
            <span
              class="usa-tag display-inline-block text-bold text-middle text-center text-no-wrap text-success-dark bg-success-lighter minw-15 margin-top-2px margin-bottom-05"
            >
              Approved
            </span>
          </div>
          <div
            class="desktop:grid-col-fill text-wrap"
          >
            <div
              class="text-medium"
            >
              Medical leave
            </div>
            1/1/2020 to 2/1/2020
            <div
              class="font-body-2xs"
            >
              Continuous leave
            </div>
          </div>
        </div>
      </td>
      <td
        data-label="Review due date"
      >
        <a
          class="usa-button margin-bottom-05"
          href="/employers/applications/status?absence_id=NTN-111-ABS-01"
        >
          Review Application
        </a>
        <br />
        Respond by 5/1/2021
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Employer dashboard renders a verification message in the table, when all employers are unverified 1`] = `
<td
  colspan="3"
>
  You have not verified any organizations. 
  <a
    href="/employers/organizations"
  >
    Complete this process
  </a>
   to review applications.
</td>
`;

exports[`Employer dashboard renders a verification message in the table, when all employers are unverified 2`] = `
<td
  colspan="5"
>
  You have not verified any organizations. 
  <a
    href="/employers/organizations"
  >
    Complete this process
  </a>
   to review applications.
</td>
`;

exports[`Employer dashboard renders the banner if there are any unverified employers 1`] = `
<div
  aria-labelledby="alert-heading451"
  class="usa-alert usa-alert--warning"
  role="region"
  tabindex="-1"
>
  <div
    class="usa-alert__body"
  >
    <h2
      class="usa-alert__heading font-heading-md text-bold"
      id="alert-heading451"
    >
      Verify your account
    </h2>
    <div
      class="usa-alert__text"
    >
      <p>
        Every employer must verify paid leave contributions when creating an account. You need to 
        <a
          href="/employers/organizations"
        >
          complete this process
        </a>
         to review applications from your team. If you have an EIN that isn't verified you won't see any applications related to that EIN.
      </p>
    </div>
  </div>
</div>
`;

exports[`Employer dashboard renders the page with expected content and pagination components 1`] = `
<div>
  <nav
    aria-label="Employer menu"
    class="border-bottom border-base-lighter margin-bottom-5 display-flex width-full"
  >
    <a
      class="display-inline-block padding-y-2 margin-bottom-neg-1px text-no-underline width-card text-base-dark hover:text-primary hover:text-underline"
      href="/employers/welcome"
    >
      Welcome
    </a>
    <a
      aria-current="page"
      class="display-inline-block padding-y-2 margin-bottom-neg-1px text-no-underline width-card border-primary border-bottom-05 text-bold text-primary"
      href="/employers/dashboard"
    >
      Dashboard
    </a>
  </nav>
  <h1
    class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
    tabindex="-1"
  >
    Dashboard
  </h1>
  <div
    class="measure-6"
  />
  <section
    class="margin-bottom-4 margin-top-2"
  >
    <details
      class="c-details"
    >
      <summary
        class="margin-bottom-2 text-primary text-underline font-ui-xs"
      >
        Status descriptions
      </summary>
      <div
        class="margin-bottom-2"
      >
        <ul
          class="usa-list"
        >
          <li>
            <strong>
              Review by:
            </strong>
             Review this application by this date to provide DFML with your input.
          </li>
          <li>
            <strong>
              No action required:
            </strong>
             This leave request is awaiting a decision from DFML.
          </li>
          <li>
            <strong>
              Denied:
            </strong>
             DFML has denied this leave request.
          </li>
          <li>
            <strong>
              Approved:
            </strong>
             DFML has approved this leave request.
          </li>
          <li>
            <strong>
              Closed:
            </strong>
             The leave has passed or no action can be taken.
          </li>
        </ul>
      </div>
    </details>
  </section>
  <section
    class="margin-top-2"
  >
    <div
      class="bg-base-lightest padding-x-3 padding-top-1px padding-bottom-2"
    >
      <form
        class="usa-form grid-row"
      >
        <div
          class="grid-col-fill tablet:grid-col-auto"
        >
          <div
            class="usa-form-group"
          >
            <label
              class="usa-label text-bold font-heading-xs measure-5"
              for="InputText1"
              id="InputText1_label"
            >
              Search for employee name or application ID
            </label>
            <input
              aria-labelledby="InputText1_label InputText1_hint InputText1_error"
              class="usa-input maxw-mobile-lg"
              id="InputText1"
              name="search"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-col-auto flex-align-self-end"
        >
          <button
            class="usa-button position-relative width-auto"
            type="submit"
          >
            Search
          </button>
        </div>
      </form>
    </div>
  </section>
  <div
    class="padding-bottom-3 bg-base-lightest padding-x-3"
  >
    <button
      aria-controls="filters"
      aria-expanded="false"
      class="usa-button position-relative usa-button--outline bg-white"
      type="button"
    >
      Show filters
    </button>
  </div>
  <div
    hidden=""
    id="filters"
  >
    <form
      class="bg-primary-lighter padding-x-3 padding-top-1px padding-bottom-3 usa-form maxw-none"
    >
      <fieldset
        class="usa-fieldset margin-top-3 usa-form-group"
      >
        <legend
          class="usa-label text-bold usa-legend font-heading-xs measure-5"
        >
          Status
        </legend>
        <div
          class=""
        >
          <div
            class="usa-checkbox measure-5 bg-transparent"
          >
            <input
              class="usa-checkbox__input"
              id="InputChoice2"
              name="claim_status"
              type="checkbox"
              value="Approved"
            />
            <label
              class="usa-checkbox__label"
              for="InputChoice2"
            >
              Approved
            </label>
          </div>
          <div
            class="usa-checkbox measure-5 bg-transparent"
          >
            <input
              class="usa-checkbox__input"
              id="InputChoice3"
              name="claim_status"
              type="checkbox"
              value="Closed"
            />
            <label
              class="usa-checkbox__label"
              for="InputChoice3"
            >
              Closed
            </label>
          </div>
          <div
            class="usa-checkbox measure-5 bg-transparent"
          >
            <input
              class="usa-checkbox__input"
              id="InputChoice4"
              name="claim_status"
              type="checkbox"
              value="Declined"
            />
            <label
              class="usa-checkbox__label"
              for="InputChoice4"
            >
              Denied
            </label>
          </div>
          <div
            class="usa-checkbox measure-5 bg-transparent"
          >
            <input
              class="usa-checkbox__input"
              id="InputChoice5"
              name="claim_status"
              type="checkbox"
              value="Pending - no action"
            />
            <label
              class="usa-checkbox__label"
              for="InputChoice5"
            >
              No action required
            </label>
          </div>
          <div
            class="usa-checkbox measure-5 bg-transparent"
          >
            <input
              class="usa-checkbox__input"
              id="InputChoice6"
              name="claim_status"
              type="checkbox"
              value="Open requirement"
            />
            <label
              class="usa-checkbox__label"
              for="InputChoice6"
            >
              Review by
            </label>
          </div>
        </div>
      </fieldset>
      <button
        class="usa-button position-relative"
        disabled=""
        type="submit"
      >
        Apply filters
      </button>
    </form>
  </div>
  <div
    class="margin-y-2 grid-row grid-gap flex-align-center"
  >
    <div
      class="grid-col grid-col-12 margin-bottom-2 mobile-lg:grid-col-fill mobile-lg:margin-bottom-0"
    >
      <p
        aria-live="polite"
        class="line-height-sans-2"
      >
        Viewing 1 to 25 of 75 results
      </p>
    </div>
    <div
      class="grid-col grid-col-auto"
    >
      <div
        class="usa-form-group display-flex margin-0 flex-align-center"
      >
        <label
          class="usa-label text-bold margin-right-1 font-heading-xs measure-5"
          for="Dropdown14"
          id="Dropdown14_label"
        >
          Sort
        </label>
        <div
          class=""
          data-default-value="absence_status,ascending"
        >
          <select
            aria-labelledby="Dropdown14_label Dropdown14_hint Dropdown14_error"
            class="usa-select maxw-mobile-lg margin-0"
            id="Dropdown14"
            name="orderAndDirection"
          >
            <option
              value="absence_status,ascending"
            >
              Status
            </option>
            <option
              value="created_at,descending"
            >
              Newest applications
            </option>
            <option
              value="created_at,ascending"
            >
              Oldest applications
            </option>
            <option
              value="employee,ascending"
            >
              Last name – A to Z
            </option>
            <option
              value="employee,descending"
            >
              Last name – Z to A
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
  <div
    class="usa-table-container--scrollable"
  >
    <table
      class="usa-table usa-table--borderless width-full usa-table--stacked"
    >
      <thead>
        <tr>
          <th
            scope="col"
          >
            Employee name
          </th>
          <th
            scope="col"
          >
            Application ID
          </th>
          <th
            scope="col"
          >
            Employer ID number
          </th>
          <th
            scope="col"
          >
            Application start date
          </th>
          <th
            scope="col"
          >
            Status
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-test="verification-instructions-row"
        >
          <td
            colspan="5"
          >
            You have not verified any organizations. 
            <a
              href="/employers/organizations"
            >
              Complete this process
            </a>
             to review applications.
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    aria-label="Pagination Navigation"
    class="ma__pagination js-pagination"
    role="navigation"
  >
    <nav
      class="ma__pagination__container"
    >
      <a
        aria-disabled="true"
        aria-label="Go to Previous page"
        class="ma__pagination__prev  disabled"
        href="#"
        role="button"
        tabindex="-1"
      >
        Previous
      </a>
      <a
        aria-label="Go to Page 1"
        class="ma__pagination__page is-active"
        data-page="1"
        href="#"
        role="button"
        tabindex="0"
      >
        1
      </a>
      <a
        aria-label="Go to Page 2"
        class="ma__pagination__page"
        data-page="2"
        href="#"
        role="button"
        tabindex="0"
      >
        2
      </a>
      <a
        aria-label="Go to Page 3"
        class="ma__pagination__page"
        data-page="3"
        href="#"
        role="button"
        tabindex="0"
      >
        3
      </a>
      <a
        aria-disabled="false"
        aria-label="Go to Next page"
        class="ma__pagination__next false"
        href="#"
        role="button"
        tabindex="0"
      >
        Next
      </a>
    </nav>
  </div>
</div>
`;
